--- a/css/skillsHobbies.css
+++ b/css/skillsHobbies.css
@@ -2,9 +2,10 @@
     display: flex;
     flex-direction: column;
     margin-top: 5%;
+    
 }
 
-.skills_titulo, .hobbies_titulo{
+.skills_titulo, .hobbies_titulo,.formacion__titulo,.experiencia__title{
     display: flex;
     justify-content: center;
     font-size: 1.5rem;
@@ -29,6 +30,6 @@
     align-items: flex-start;
     justify-content: flex-end;
     height: 8rem;
-    border: 1px solid var(--color-enlaces);
-
+    /* border: 1px solid var(--color-enlaces); */
+    background: var(--background-fondo-box);
 }
