--- a/css/var.css
+++ b/css/var.css
@@ -2,7 +2,8 @@
     --open-sans: 'Open Sans', sans-serif;
     --montserrat: 'Montserrat', sans-serif; 
 
-    --background-fondo: #F5E8E4;
+    --background-fondo: #FFE6E6;
+    --background-fondo-box:#F9F9F9;
     --color-letra: #2B4865;
     --color-enlaces: #1C3879;
 }
