--- a/css/title.css
+++ b/css/title.css
@@ -1,7 +1,7 @@
 
 .title{
     display: flex;
-    
+    margin-top: 2rem;
 }
 .title_div{
     display: flex;
@@ -17,7 +17,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding-left: .5rem;
+
+    font-family: var(--tiro);
+    gap: 1rem;
 
 }
 .title__titulo{
