--- a/css/var.css
+++ b/css/var.css
@@ -1,6 +1,7 @@
 :root{
     --open-sans: 'Open Sans', sans-serif;
     --montserrat: 'Montserrat', sans-serif; 
+    --tiro: 'Tiro Gurmukhi', sans-serif;
 
     --background-fondo: #FFE6E6;
     --background-fondo-box:#F9F9F9;
