--- a/css/contacto.css
+++ b/css/contacto.css
@@ -51,3 +51,15 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media screen and (min-width: 768px){
+    .formcontato{
+        justify-content: center;
+    }
+    .formcontato__subtext{
+        font-size: 1.2rem;
+    }
+}
+@media screen and (min-width: 1024px){
+
+}
