--- a/css/formacion.css
+++ b/css/formacion.css
@@ -33,3 +33,18 @@
     font-size: 1.2rem;
 
 }
+@media screen and (min-width: 768px){
+    .formacion__contenido{
+        width: 80%;
+        padding-left: 5rem;
+    }
+}
+@media screen and (min-width: 1024px){
+    .formacion__contenido{
+        flex-direction: row;
+
+    }
+    .formacion__contenido-box{
+        width: 50%;
+    }
+}
