--- a/css/head.css
+++ b/css/head.css
@@ -37,3 +37,20 @@
     color: var(--color-letra);
     padding-left: .3rem;
 }
+@media screen and (min-width: 768px){
+    .menu{
+        flex-direction: row;
+    }
+    .menu_head{
+        justify-content: flex-start;
+    }
+}
+@media screen and (min-width: 1024px){
+    .menu__navegacion__list{
+        flex-wrap: nowrap;
+        gap: .3rem;
+    }
+    .menu_head{
+        width: 45%;
+    }
+}
