--- a/css/skillsHobbies.css
+++ b/css/skillsHobbies.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     margin-top: 5%;
-    animation: bounce; 
-    animation-duration: 2s; 
+    /* animation: bounce; 
+    animation-duration: 2s;  */
     
 }
 
@@ -34,4 +34,25 @@
     height: 8rem;
     /* border: 1px solid var(--color-enlaces); */
     background: var(--background-fondo-box);
+}
+
+
+
+
+@media screen and (min-width: 768px){
+    .skills_box, .hobbies_box{
+        width: 20%;
+    }
+}
+@media screen and (min-width: 1024px){
+    .skills_line, .hobbies_line{
+        flex-wrap: nowrap;
+    }
+    .skills_box, .hobbies_box{
+        width: 15%;
+    }
+    .skills, .hobbies{
+        width: 80%;
+        padding-left: 10%;
+    }
 }
