--- a/css/bases.css
+++ b/css/bases.css
@@ -6,6 +6,7 @@ body{
     font-family: var(--tiro);
     color: var(--color-letra);
     padding: 10px;
+  
 }
 ul, li{
     list-style: none;
@@ -26,6 +27,9 @@ button[disabled = disabled], button:disabled{
 	border-color: darkgray;
 }
 
+.resaltado{
+    border: solid #D2001A 2px !important; 
+}
 
 @media screen and (min-width: 1024px) {
     .skills_titulo,.about__title, .hobbies_titulo,.formacion__titulo,.experiencia__title, .formcontato__title{
@@ -35,6 +39,10 @@ button[disabled = disabled], button:disabled{
 @media screen and (min-width: 768px){
     .menu{
         flex-direction: row;
+    }
+    body{
+        display: flex;
+        align-items: center;
     }
 
 }
