--- a/css/bases.css
+++ b/css/bases.css
@@ -1,11 +1,17 @@
 @import url("var.css");
-
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body{
-    background: var(--background-fondo);
+    background: #0c192c;
     font-family: var(--tiro);
     color: var(--color-letra);
     padding: 10px;
+    min-height: 100vh;
   
 }
 ul, li{
