--- a/css/var.css
+++ b/css/var.css
@@ -5,6 +5,7 @@
 
     --background-fondo: #FFE6E6;
     --background-fondo-box:#F9F9F9;
-    --color-letra: #2B4865;
+    --color-letra: #fff;
     --color-enlaces: #1C3879;
+    /*color anterior de letra #2B4865*/
 }
