--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -1,13 +1,17 @@
 @import url("var.css");
 .experiencia{
-    gap: 1.5rem;
+    display: flex;
+    margin-top: 8%;
+    flex-direction: column;
+    width: 70%;
 }
 .experiencia__box{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1.5rem;
-
+    gap: 1rem;
+    width: 76%;
+    margin-top: 5%;
 }
 .experiencia__img{
     width: 80%;
@@ -19,16 +23,15 @@
     align-items: center;
     font: var(--open-sans);
     gap: 1rem;
+    width: 70%;
 }
 .experiencia__subtitle{
-    font-size: 1.2rem;
+    font-size: .67rem;
     font: var(--open-sans);
-    font-weight: 700;
-
 }
 .experiencia__text{
     font: var(--open-sans);
-    font-size: 1rem;
+    font-size: .57rem;
     align-items: center;
 }
 .experiencia__descrip{
@@ -36,30 +39,21 @@
     gap: 1rem;
     width: 100%;
 }
-/* .experiencia__repo{
-
-} */
-.experiencia__boton-repo{
-    background: #80558C;
-    height: 2.5rem;
+.experiencia__buttons{
+    width: 100%;
+    display: flex;
+    height: 2rem;
+} 
+.experiencia__button{
+    background: #4fc3dc44;
     color: #F9F5EB;
-    width: 10rem;
     border: 1px solid #D8DFE8;
-    font-size: 1rem;
-    margin-left: 1rem;
+    font-size: .57rem;
+    height: 63%;
+    width: 100%;
+    padding: .2rem;
 }
-/* .experiencia__demo{
 
-} */
-.experiencia__boton-demo{
-    background: #AC7088;
-    height: 2.5rem;
-    color: #F9F5EB;
-    width: 10rem;
-    border: 1px solid #D8DFE8;
-    font-size: 1rem;
-
-}
 
 @media screen and (min-width: 768px){
     .experiencia{
