--- a/css/fondo.css
+++ b/css/fondo.css
@@ -1,10 +1,10 @@
 @import url("var.css");
 
 .todo{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: unset;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: calc(30% / 2);
 }
 .bubbles{
     position: relative;
