--- a/css/titleAbout.css
+++ b/css/titleAbout.css
@@ -1,26 +1,29 @@
+/*Estilo mobileFirst*/
+
 .about{
     display: flex;
     margin-top: 5%;
     flex-direction: column;
-    margin-left: 0.5rem;
+    width: 80%;
 }
 
 .about__descripcion{
     padding-top: 1rem;
-    font-size: 1.3rem;
+    font-size: .87rem;
+    width: 70%;
     font-family: var(--tiro);
 }
 
 .title{
     display: flex;
-    margin-top: 2rem;
-    max-width: 1024px;
+    width: 80%;
 }
 .title_div{
     display: flex;
-    margin-top: 5%;
     flex-direction: column;
     align-items: center;
+    padding-top: 8%;
+    width: 80%;
 }
 .title__imagen{
     width: 45%;
@@ -30,31 +33,24 @@
 .title__contenido{
     display: flex;
     flex-direction: column;
-    margin-top: 2rem;
-    align-items: center;
     font-family: var(--tiro);
     gap: 1rem;
+    width: 80%;
+    padding-top: 8%;
 
 }
 .title__titulo{
-    font-size: 1.7rem;
     font-weight: bold;
 }
-.title_texto{
-    font-size: 1.4rem;
-}
+
 .title__list{
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
     gap: 1rem;
 }
 .title__list-items a{
     color: var(--color-letra);
-    padding-left: .6rem;
-    padding-bottom: .5rem;
-    font-size: 1.2rem;
 }
 .title__item-imagen{
     width: .8rem;
@@ -75,7 +71,6 @@
     }
 
     .title, .about{
-        width: 80%;
-        padding-left: 10%;
+
     }
 }
