--- a/css/bases.css
+++ b/css/bases.css
@@ -5,7 +5,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 body{
     background: #0c192c;
     font-family: var(--tiro);
