--- a/css/fondo.css
+++ b/css/fondo.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: calc(30% / 2);
+    padding-left:8%;
 }
 .bubbles{
     position: relative;
@@ -35,5 +35,11 @@
     }
     100%{
         transform: translateY(-10vh) scale(1);
+    }
+}
+@media screen and (min-width: 768px){
+    .todo{
+        width: 90%;
+        padding-left: 3%;
     }
 }
