--- a/css/head.css
+++ b/css/head.css
@@ -3,7 +3,6 @@
     display: flex;
     height: 5rem;
     flex-direction: column;
-    width: 70%;
     
 }
 .menu h3{
@@ -13,7 +12,7 @@
 .menu__navegacion{
     display: flex;
     align-items: center;
-    width: 74%;
+    width: 94%;
 }
 .menu__navegacion__list{
     display: flex;
@@ -31,10 +30,16 @@
 }
 @media screen and (min-width: 768px){
     .menu{
+        width: 80%;
         flex-direction: row;
+        align-items: center;
     }
-    .menu_head{
-        justify-content: flex-start;
+    .menu__navegacion{
+        justify-content: space-around;
+    }
+    .menu__navegacion__list{
+        gap: 1rem;
+        font-size: 2rem;
     }
 }
 @media screen and (min-width: 1024px){
