--- a/css/skillsHobbies.css
+++ b/css/skillsHobbies.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 5%;
-    width: 70%;
+    width: 90%;
     /* animation: bounce; 
     animation-duration: 2s;  */
     
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 4rem;
+    height: 7vh;
     color: black;
     background: bisque;
     font-size: .57rem;
