--- a/css/titleAbout.css
+++ b/css/titleAbout.css
@@ -4,26 +4,23 @@
     display: flex;
     margin-top: 5%;
     flex-direction: column;
-    width: 80%;
 }
 
 .about__descripcion{
     padding-top: 1rem;
     font-size: .87rem;
-    width: 70%;
+    width: 90%;
     font-family: var(--tiro);
 }
 
 .title{
     display: flex;
-    width: 80%;
 }
 .title_div{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 8%;
-    width: 80%;
 }
 .title__imagen{
     width: 45%;
@@ -55,9 +52,27 @@
 .title__item-imagen{
     width: .8rem;
 }
+@media screen and (min-width: 768px){
+    .title{
+        width: 80%;
+    }
+    .title_div{
+        width: 80%;
+        align-items: flex-start;
+        flex-direction: row;
+    }
+    .title__imagen{
+        max-height: 80%;
+        border-radius: 50%;
+    }
+    .title__list{
+        flex-direction: column;
+        align-items: center;
+    }
+}
 @media screen and (min-width: 1024px){
     .title__titulo{
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
     .title_texto{
         font-size: 1.7rem;
