--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -39,15 +39,16 @@
     width: 100%;
 }
 .experiencia__buttons{
-    width: 100%;
+    /*width: 100%;*/
     display: flex;
     height: 2rem;
 } 
 .experiencia__button{
-    background: #4fc3dc44;
+    background: #205295;
     color: #F9F5EB;
-    border: 1px solid #D8DFE8;
+    border: 1px solid #5B8FB9;
     font-size: .57rem;
+    border-radius: 50%;
     height: 63%;
     width: 100%;
     padding: .2rem;
@@ -59,7 +60,7 @@
         align-items: center;
     }
     .experiencia__box{
-        width: 70%;
+        width: 60%;
     }
     .experiencia__subtitle{
         font-size: 1.5rem;
@@ -67,13 +68,36 @@
     .experiencia__text{
         font-size: 1.2rem;
     }
+    .experiencia__img{
+        width: 70%;
+        max-height: 39vh;
+    }
     .experiencia__descrip{
+        height: 6vh;
         justify-content: center;
+    }
+    .experiencia__buttons{
+        height: 100%;
+    }
+    .experiencia__button{
+        height: 100%;
+        width: 10vh;
+        font-size: 1rem;
     }
 }
 @media screen and (min-width: 1024px){
+    .experiencia{
+        align-items: flex-start;
+        flex-direction: row;
+    }
+    .experiencia__box{
+        justify-content: space-between;
+    }
     .experiencia__img{
         max-height: 22rem;
         max-width: 30rem;
+    }
+    .experiencia__button{
+        width: 12vh;
     }
 }
