--- a/css/skillsHobbies.css
+++ b/css/skillsHobbies.css
@@ -3,17 +3,9 @@
     flex-direction: column;
     margin-top: 5%;
     width: 90%;
-    /* animation: bounce; 
-    animation-duration: 2s;  */
-    
+
 }
 
-.skills_titulo,.about__title, .hobbies_titulo,.formacion__titulo,.experiencia__title, .formcontato__title{
-    display: flex;
-    font-size: 1rem;
-    font-weight: bold;
-}
-/* azul-violeta #311EB4 #6F2FCA* #6F0427 #094249*/
 .skills_line, .hobbies_line{
     margin-top: 5%;
     display: flex;
@@ -30,9 +22,9 @@
     flex-direction: column;
     justify-content: flex-end;
     height: 7vh;
-    color: black;
-    background: bisque;
     font-size: .57rem;
+    border: 1px solid #B9FFF8;
+    border-radius: 20%;
 }
 
 
@@ -40,7 +32,11 @@
 
 @media screen and (min-width: 768px){
     .skills_box, .hobbies_box{
-        width: 20%;
+        width: 16vh;
+        height: 13vh;
+        justify-content: center;
+        align-items: center;
+        font-size: 1rem;
     }
 }
 @media screen and (min-width: 1024px){
